--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 
         <header>
             <div class="header-left">
-                <img src="http://boolean.careers/images/common/logo.png" alt="">
+                <!-- <img src="http://boolean.careers/images/common/logo.png" alt="">  questo logo non era più accessibile. nè ho inserito uno visibile sotto-->
+                <img src="http://boolean.careers/images/misc/logo.png" alt="">
             </div>
             <div class="header-right">
                 <ul>
